fixed Layout issues.
Should be able ping messages from server by tomorrow's end. Gonna revisit the plans and proceed to modify the database(Cloud Firestore).

--- a/Project ACCA/accaonline/src/App.css
+++ b/Project ACCA/accaonline/src/App.css
@@ -39,29 +39,52 @@
   box-shadow: 1px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
+#loggedInContainer{
+  display: none;
+}
+
 .App_SideBar {
   display: block;
   float: left;
   position: relative;
-  width: 50px;
-  margin-top: calc(5vh + 30px);
-  height: calc(100vh - (5vh + 30px));
+  width: 49px;
+  margin-top: calc(5.5vh + 30px);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: calc(100vh - (5.5vh + 50px));
+  font-size: small;
   z-index: 90;
-  background-color: #262626;
-  box-shadow: 1px 0px 15px rgba(0, 0, 0, 0.5);
+  background-color: #26262600;
+  border-right: 1px solid rgb(56, 56, 56);
 }
 
-.main_Container {
-  z-index: 0;
+.App_ChatList {
+  display: block;
+  float: left;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-top: calc(5vh + 30px);
-  width: calc(100% - 70px);
-  margin-top: calc(5vh + 30px);
-  height: calc(100vh - (5vh + 30px));
-  float: right;
-  padding: 10px;
+  width: 299px;
+  margin-top: calc(5.5vh + 30px);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: calc(100vh - (5.5vh + 50px));
+  font-size: small;
+  z-index: 90;
+  background-color: #26262600;
+  border-right: 1px solid rgb(59, 59, 59);
+}
+
+.App_ChatBox {
+  display: block;
+  float: left;
+  position: relative;
+  width: calc(100vw - 350px);
+  margin-top: calc(5.5vh + 30px);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: calc(100vh - (5.5vh + 50px));
+  font-size: small;
+  z-index: 90;
+  background-color: #26262600;
 }
 
 .headerImage{
